{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 69,
  "lineage": "c49a59e9-f491-88d8-288a-92fb19d1b296",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "debezium",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085cdf323a201d72d",
            "arn": "arn:aws:ec2:eu-north-1:467091806172:instance/i-042dbb1daaa085576",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042dbb1daaa085576",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "staff-de-journey-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024ac17ef330c9ead",
            "private_dns": "ip-10-0-1-170.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.170",
            "public_dns": "ec2-56-228-75-74.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.75.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "env": "dev",
                  "project": "staff-de-journey"
                },
                "throughput": 125,
                "volume_id": "vol-08e5fd923a7393c5b",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c3f87cfb6af75bd8",
            "tags": {
              "Name": "staff-de-journey-debezium"
            },
            "tags_all": {
              "Name": "staff-de-journey-debezium",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0390a6ba9a304d5f2"
            ]
          },
          "dependencies": [
            "aws_security_group.debezium",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:internet-gateway/igw-0f94e80f9913f48dd",
            "id": "igw-0f94e80f9913f48dd",
            "owner_id": "467091806172",
            "tags": {
              "Name": "staff-de-journey-igw"
            },
            "tags_all": {
              "Name": "staff-de-journey-igw",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "vpc_id": "vpc-0dd80759fb3b617ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:route-table/rtb-0315af8b303d36f3a",
            "id": "rtb-0315af8b303d36f3a",
            "owner_id": "467091806172",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f94e80f9913f48dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staff-de-journey-rt-public"
            },
            "tags_all": {
              "Name": "staff-de-journey-rt-public",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd80759fb3b617ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b973163a012707f1",
            "route_table_id": "rtb-0315af8b303d36f3a",
            "subnet_id": "subnet-0c3f87cfb6af75bd8"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.private_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01863a7f279c0fbdf",
            "route_table_id": "rtb-0315af8b303d36f3a",
            "subnet_id": "subnet-03e96b9010fcdfa3f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "debezium",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:security-group/sg-0390a6ba9a304d5f2",
            "description": "Debezium host - SSH access only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound - needs to reach RDS and MSK in VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0390a6ba9a304d5f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "82.36.40.197/32"
                ],
                "description": "SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "staff-de-journey-debezium-sg",
            "name_prefix": "",
            "owner_id": "467091806172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staff-de-journey-debezium-sg"
            },
            "tags_all": {
              "Name": "staff-de-journey-debezium-sg",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd80759fb3b617ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:security-group/sg-094179e9650062c42",
            "description": "Controls access to MSK Kafka brokers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094179e9650062c42",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "82.36.40.197/32"
                ],
                "description": "Kafka TLS from allowed CIDRs",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9094
              },
              {
                "cidr_blocks": [
                  "82.36.40.197/32"
                ],
                "description": "Kafka plaintext from allowed CIDRs",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "82.36.40.197/32"
                ],
                "description": "Kafka public TLS port",
                "from_port": 9196,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9196
              },
              {
                "cidr_blocks": [
                  "82.36.40.197/32"
                ],
                "description": "Zookeeper from allowed CIDRs",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              }
            ],
            "name": "staff-de-journey-msk-sg",
            "name_prefix": "",
            "owner_id": "467091806172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staff-de-journey-msk-sg"
            },
            "tags_all": {
              "Name": "staff-de-journey-msk-sg",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd80759fb3b617ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:security-group/sg-09b7548058600ad3e",
            "description": "Controls access to RDS PostgreSQL port 5432",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b7548058600ad3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "82.36.40.197/32"
                ],
                "description": "PostgreSQL from allowed CIDRs (your IP + Debezium)",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "staff-de-journey-rds-sg",
            "name_prefix": "",
            "owner_id": "467091806172",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "staff-de-journey-rds-sg"
            },
            "tags_all": {
              "Name": "staff-de-journey-rds-sg",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd80759fb3b617ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:subnet/subnet-0c3f87cfb6af75bd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3f87cfb6af75bd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467091806172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staff-de-journey-private-a"
            },
            "tags_all": {
              "Name": "staff-de-journey-private-a",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "vpc_id": "vpc-0dd80759fb3b617ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:subnet/subnet-03e96b9010fcdfa3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e96b9010fcdfa3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467091806172",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staff-de-journey-private-b"
            },
            "tags_all": {
              "Name": "staff-de-journey-private-b",
              "env": "dev",
              "project": "staff-de-journey"
            },
            "vpc_id": "vpc-0dd80759fb3b617ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:467091806172:vpc/vpc-0dd80759fb3b617ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec2346f517f24ef0",
            "default_route_table_id": "rtb-0f17f3022cbe8f634",
            "default_security_group_id": "sg-04775c5f5d1d4d5bd",
            "dhcp_options_id": "dopt-01e66006b8bbf2c10",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd80759fb3b617ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f17f3022cbe8f634",
            "owner_id": "467091806172",
            "tags": {
              "Name": "staff-de-journey-vpc"
            },
            "tags_all": {
              "Name": "staff-de-journey-vpc",
              "env": "dev",
              "project": "staff-de-journey"
            }
          }
        }
      ]
    }
  ]
}